--- a/temat3/jsapp/app/index.html
+++ b/temat3/jsapp/app/index.html
@@ -30,21 +30,46 @@
 
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
-            <div class="item active">
-              <img src="http://www.vintage-attack.com/product_picture/full_size/70d512563862e70fd7d680dd946bc0f3.jpg">
-            </div>
-            <div class="item">
-              <img src="http://www.vintage-attack.com/product_picture/full_size/9ab8e6046aca6f7dbe76bd82b026c552.jpg">
-            </div>
-            <div class="item">
-              <img src="http://www.vintage-attack.com/product_picture/full_size/273ad1b29864f3a6d8a9c5d79d59e30d.jpg">
-            </div>
-            <div class="item">
-              <img src="http://www.vintage-attack.com/product_picture/full_size/baa8910db52b2a42756d9b4696bb5601.jpg">
-            </div>
-            <div class="item">
-              <img src="http://www.vintage-attack.com/product_picture/full_size/3114175142cf1dfca58b61680306ee3b.jpg">
-            </div>
+            <div class="item active"><img src="http://www.vintage-attack.com/product_picture/full_size/70d512563862e70fd7d680dd946bc0f3.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/9ab8e6046aca6f7dbe76bd82b026c552.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/273ad1b29864f3a6d8a9c5d79d59e30d.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/baa8910db52b2a42756d9b4696bb5601.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/3114175142cf1dfca58b61680306ee3b.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/70d512563862e70fd7d680dd946bc0f3.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/9ab8e6046aca6f7dbe76bd82b026c552.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/273ad1b29864f3a6d8a9c5d79d59e30d.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/baa8910db52b2a42756d9b4696bb5601.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/3114175142cf1dfca58b61680306ee3b.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/70d512563862e70fd7d680dd946bc0f3.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/9ab8e6046aca6f7dbe76bd82b026c552.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/273ad1b29864f3a6d8a9c5d79d59e30d.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/baa8910db52b2a42756d9b4696bb5601.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/3114175142cf1dfca58b61680306ee3b.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/70d512563862e70fd7d680dd946bc0f3.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/9ab8e6046aca6f7dbe76bd82b026c552.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/273ad1b29864f3a6d8a9c5d79d59e30d.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/baa8910db52b2a42756d9b4696bb5601.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/3114175142cf1dfca58b61680306ee3b.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/70d512563862e70fd7d680dd946bc0f3.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/9ab8e6046aca6f7dbe76bd82b026c552.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/273ad1b29864f3a6d8a9c5d79d59e30d.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/baa8910db52b2a42756d9b4696bb5601.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/3114175142cf1dfca58b61680306ee3b.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/70d512563862e70fd7d680dd946bc0f3.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/9ab8e6046aca6f7dbe76bd82b026c552.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/273ad1b29864f3a6d8a9c5d79d59e30d.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/baa8910db52b2a42756d9b4696bb5601.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/3114175142cf1dfca58b61680306ee3b.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/70d512563862e70fd7d680dd946bc0f3.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/9ab8e6046aca6f7dbe76bd82b026c552.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/273ad1b29864f3a6d8a9c5d79d59e30d.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/baa8910db52b2a42756d9b4696bb5601.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/3114175142cf1dfca58b61680306ee3b.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/70d512563862e70fd7d680dd946bc0f3.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/9ab8e6046aca6f7dbe76bd82b026c552.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/273ad1b29864f3a6d8a9c5d79d59e30d.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/baa8910db52b2a42756d9b4696bb5601.jpg"></div>
+            <div class="item"><img src="http://www.vintage-attack.com/product_picture/full_size/3114175142cf1dfca58b61680306ee3b.jpg"></div>
           </div>
 
           <!-- Controls -->
