--- a/temat4/adaptive-images/index.html
+++ b/temat4/adaptive-images/index.html
@@ -22,6 +22,12 @@
 				Original size: 1900&times;1069px
 			</figcaption>
 		</figure>
+
+		<ul>
+			<li>Works everywhere</li>
+			<li>Doesn't track viewport changes</li>
+			<li>Doesn't detect orientation changes</li>
+		</ul>
 	</div>
 </body>
 </html>
