--- a/temat3/subpixel-rendering/demo2-1.html
+++ b/temat3/subpixel-rendering/demo2-1.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-    translate
+    requestAnimationFrame
     <div class="stars-container">
         <div class="stars"></div>
     </div>
