--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <head>
 	<title></title>
-	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" />
+	<link href="stylesheets/screen.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
+<script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
