--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<head>
-	<title></title>
-	<link href="stylesheets/screen.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
+<html lang="pl">
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="">
+      <meta name="author" content="">
 
-<script src="http://localhost:35729/livereload.js"></script>
-</body>
+
+      <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" />
+      <script src="http://localhost:35729/livereload.js"></script>
+    </head>
+
+    <body>
+    </body>
 </html>
