--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="author" content="">
 
 
-      <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" />
+      <link href="stylesheets/screen.css" rel="stylesheet" type="text/css" />
       <script src="http://localhost:35729/livereload.js"></script>
     </head>
 
