Temat7/demo - adds webp files

--- a/temat7/demo/index.html
+++ b/temat7/demo/index.html
@@ -52,19 +52,22 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
               <div class="item active">
-                <img src="images/content/12/1.jpg" alt="obraz">
+                <img src="images/content/12/1.webp" alt="obraz">
+                <!--<img src="images/content/12/1.jpg" alt="obraz">-->
                 <div class="carousel-caption">
                   <h1 class="hidden-xs">Lorem Ipsum </h1>
                 </div>
               </div>
               <div class="item">
-                <img src="images/content/12/2.jpg" alt="obraz">
+                <img src="images/content/12/2.webp" alt="obraz">
+                <!--<img src="images/content/12/2.jpg" alt="obraz">-->
                 <div class="carousel-caption">
                   <h1 class="hidden-xs">Lorem Ipsum </h1>
                 </div>
               </div>
               <div class="item">
-                <img src="images/content/12/3.jpg" alt="obraz">
+                <img src="images/content/12/3.webp" alt="obraz">
+                <!--<img src="images/content/12/3.jpg" alt="obraz">-->
                 <div class="carousel-caption">
                   <h1 class="hidden-xs">Lorem Ipsum </h1>
                 </div>
@@ -86,20 +89,23 @@
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-body">
-            <img src="images/content/4/1.jpg" alt="alt" class="img-responsive"/>
+            <img src="images/content/4/1.webp" alt="alt" class="img-responsive"/>
+            <!--<img src="images/content/4/1.jpg" alt="alt" class="img-responsive"/>-->
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-body">
-            <img src="images/content/4/2.jpg" alt="alt" class="img-responsive"/>
+            <img src="images/content/4/2.webp" alt="alt" class="img-responsive"/>
+            <!--<img src="images/content/4/2.jpg" alt="alt" class="img-responsive"/>-->
         </div>
         </div></div>
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-body">
-            <img src="images/content/4/3.jpg" alt="alt" class="img-responsive"/>
+            <img src="images/content/4/3.webp" alt="alt" class="img-responsive"/>
+            <!--<img src="images/content/4/3.jpg" alt="alt" class="img-responsive"/>-->
         </div>
       </div>
       </div>
@@ -110,14 +116,16 @@
       <div class="col-md-6">
         <div class="panel panel-default">
         <div class="panel-body">
-          <img src="images/content/6/1.jpg" alt="alt" class="img-responsive"/>
+          <img src="images/content/6/1.webp" alt="alt" class="img-responsive"/>
+          <!--<img src="images/content/6/1.jpg" alt="alt" class="img-responsive"/>-->
         </div>
         </div>
       </div>
       <div class="col-md-6">
         <div class="panel panel-default">
           <div class="panel-body">
-            <img src="images/content/6/2.jpg" alt="alt" class="img-responsive"/>
+            <img src="images/content/6/2.webp" alt="alt" class="img-responsive"/>
+            <!--<img src="images/content/6/2.jpg" alt="alt" class="img-responsive"/>-->
           </div>
         </div>
       </div>
@@ -129,7 +137,8 @@
         <div class="panel panel-success">
             <div class="panel-heading">Panel heading without title</div>
           <div class="panel-body">
-            <img src="images/content/3/1.jpg" alt="alt" class="img-responsive"/>
+            <img src="images/content/3/1.webp" alt="alt" class="img-responsive"/>
+            <!--<img src="images/content/3/1.jpg" alt="alt" class="img-responsive"/>-->
           </div>
         </div>
       </div>
@@ -137,7 +146,8 @@
         <div class="panel panel-info">
           <div class="panel-heading">Panel heading without title</div>
           <div class="panel-body">
-            <img src="images/content/3/2.jpg" alt="alt" class="img-responsive"/>
+            <img src="images/content/3/2.webp" alt="alt" class="img-responsive"/>
+            <!--<img src="images/content/3/2.jpg" alt="alt" class="img-responsive"/>-->
           </div>
         </div>
       </div>
@@ -145,7 +155,8 @@
           <div class="panel panel-default">
             <div class="panel-heading">Panel heading without title</div>
             <div class="panel-body">
-              <img src="images/content/3/3.jpg" alt="alt" class="img-responsive"/>
+              <img src="images/content/3/3.webp" alt="alt" class="img-responsive"/>
+              <!--<img src="images/content/3/3.jpg" alt="alt" class="img-responsive"/>-->
             </div>
           </div>
         </div>
@@ -153,7 +164,8 @@
           <div class="panel panel-default">
             <div class="panel-heading">Panel heading without title</div>
             <div class="panel-body">
-              <img src="images/content/3/4.jpg" alt="alt" class="img-responsive"/>
+              <img src="images/content/3/4.webp" alt="alt" class="img-responsive"/>
+              <!--<img src="images/content/3/4.jpg" alt="alt" class="img-responsive"/>-->
             </div>
         </div>
       </div>
