--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <html lang="pl">
     <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="">
-      <meta name="author" content="">
+        <title>Devcamp Tłokinia</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
 
-      <link href="stylesheets/screen.css" rel="stylesheet" type="text/css" />
-      <script src="http://localhost:35729/livereload.js"></script>
+        <link href="stylesheets/screen.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
+        <div class="page">
+            <h1>Tłokinia</h1>
+
+            <nav>
+                Nav
+            </nav>
+
+            <p>Test</p>
+        </div>
+
+        <script src="http://localhost:35729/livereload.js"></script>
     </body>
 </html>
