--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
+<!doctype html>
 <html lang="pl">
     <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="">
-      <meta name="author" content="">
-
-
-      <link href="stylesheets/screen.css" rel="stylesheet" type="text/css" />
-      <script src="http://localhost:35729/livereload.js"></script>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link href="stylesheets/screen.css" rel="stylesheet" type="text/css" />
+        <script src="http://localhost:35729/livereload.js"></script>
     </head>
 
     <body>
+
+        <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span data-src="assets/images/1-small"></span>
+            <span data-src="assets/images/1-medium" data-media="(min-width: 700px)"></span>
+            <span data-src="assets/images/1-large" data-media="(min-width: 1200px)"></span>
+            <noscript>
+                <img src="assets/images/1-small.jpg" alt="Devcamp 2013">
+            </noscript>
+        </span>
+
+        <script src="/js/vendor/jquery.min.js"></script>
+        <script src="/js/vendor/modernizr.js"></script>
+        <script src="/js/vendor/picturefill.js"></script>
     </body>
 </html>
