Separating project directory, moving js libs to bower

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="page">
             <h1>Tłokinia</h1>
-
+            <img src="assets/images/7-large.jpg" alt="">
             <nav>
                 Nav
             </nav>
@@ -29,9 +29,9 @@
                 </noscript>
             </span>
         </div>
-        <script src="/js/vendor/jquery.min.js"></script>
-        <script src="/js/vendor/modernizr.js"></script>
-        <script src="/js/vendor/picturefill.js"></script>
+        <script src="/bower_components/jquery/jquery.min.js"></script>
+        <script src="/bower_components/modernizr/modernizr.js"></script>
+        <script src="/bower_components/picturefill/picturefill.js"></script>
         <script src="http://localhost:35729/livereload.js"></script>
     </body>
 </html>
