--- a/index.html
+++ b/index.html
@@ -20,12 +20,84 @@
 
             <p>Test</p>
 
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" data-picture="shown" data-alt="Devcamp 2013">
                 <span data-src="assets/images/1-small"></span>
                 <span data-src="assets/images/1-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/1-large" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/1-small.jpg" alt="Devcamp 2013">
+                </noscript>
+            </span>
+            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+                <span data-src="assets/images/2-small"></span>
+                <span data-src="assets/images/2-medium" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/2-large" data-media="(min-width: 1200px)"></span>
+                <noscript>
+                    <img src="assets/images/2-small.jpg" alt="Devcamp 2013">
+                </noscript>
+            </span>
+            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+                <span data-src="assets/images/3-small"></span>
+                <span data-src="assets/images/3-medium" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/3-large" data-media="(min-width: 1200px)"></span>
+                <noscript>
+                    <img src="assets/images/3-small.jpg" alt="Devcamp 2013">
+                </noscript>
+            </span>
+            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+                <span data-src="assets/images/4-small"></span>
+                <span data-src="assets/images/4-medium" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/4-large" data-media="(min-width: 1200px)"></span>
+                <noscript>
+                    <img src="assets/images/4-small.jpg" alt="Devcamp 2013">
+                </noscript>
+            </span>
+            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+                <span data-src="assets/images/5-small"></span>
+                <span data-src="assets/images/5-medium" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/5-large" data-media="(min-width: 1200px)"></span>
+                <noscript>
+                    <img src="assets/images/5-small.jpg" alt="Devcamp 2013">
+                </noscript>
+            </span>
+            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+                <span data-src="assets/images/6-small"></span>
+                <span data-src="assets/images/6-medium" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/6-large" data-media="(min-width: 1200px)"></span>
+                <noscript>
+                    <img src="assets/images/6-small.jpg" alt="Devcamp 2013">
+                </noscript>
+            </span>
+            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+                <span data-src="assets/images/7-small"></span>
+                <span data-src="assets/images/7-medium" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/7-large" data-media="(min-width: 1200px)"></span>
+                <noscript>
+                    <img src="assets/images/7-small.jpg" alt="Devcamp 2013">
+                </noscript>
+            </span>
+            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+                <span data-src="assets/images/8-small"></span>
+                <span data-src="assets/images/8-medium" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/8-large" data-media="(min-width: 1200px)"></span>
+                <noscript>
+                    <img src="assets/images/8-small.jpg" alt="Devcamp 2013">
+                </noscript>
+            </span>
+            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+                <span data-src="assets/images/9-small"></span>
+                <span data-src="assets/images/9-medium" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/9-large" data-media="(min-width: 1200px)"></span>
+                <noscript>
+                    <img src="assets/images/9-small.jpg" alt="Devcamp 2013">
+                </noscript>
+            </span>
+            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+                <span data-src="assets/images/10-small"></span>
+                <span data-src="assets/images/10-medium" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/10-large" data-media="(min-width: 1200px)"></span>
+                <noscript>
+                    <img src="assets/images/10-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
         </div>
