--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 
             <p>Test</p>
 
-            <span itemprop="image" data-picture="shown" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/1-small"></span>
                 <span data-src="assets/images/1-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/1-large" data-media="(min-width: 1200px)"></span>
@@ -28,7 +28,7 @@
                     <img src="assets/images/1-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/2-small"></span>
                 <span data-src="assets/images/2-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/2-large" data-media="(min-width: 1200px)"></span>
@@ -36,7 +36,7 @@
                     <img src="assets/images/2-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/3-small"></span>
                 <span data-src="assets/images/3-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/3-large" data-media="(min-width: 1200px)"></span>
@@ -44,7 +44,7 @@
                     <img src="assets/images/3-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/4-small"></span>
                 <span data-src="assets/images/4-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/4-large" data-media="(min-width: 1200px)"></span>
@@ -52,7 +52,7 @@
                     <img src="assets/images/4-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/5-small"></span>
                 <span data-src="assets/images/5-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/5-large" data-media="(min-width: 1200px)"></span>
@@ -60,7 +60,7 @@
                     <img src="assets/images/5-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/6-small"></span>
                 <span data-src="assets/images/6-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/6-large" data-media="(min-width: 1200px)"></span>
@@ -68,7 +68,7 @@
                     <img src="assets/images/6-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/7-small"></span>
                 <span data-src="assets/images/7-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/7-large" data-media="(min-width: 1200px)"></span>
@@ -76,7 +76,7 @@
                     <img src="assets/images/7-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/8-small"></span>
                 <span data-src="assets/images/8-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/8-large" data-media="(min-width: 1200px)"></span>
@@ -84,7 +84,7 @@
                     <img src="assets/images/8-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/9-small"></span>
                 <span data-src="assets/images/9-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/9-large" data-media="(min-width: 1200px)"></span>
@@ -92,7 +92,7 @@
                     <img src="assets/images/9-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" data-picture="lazy" data-alt="Devcamp 2013">
+            <span itemprop="image" class="image" data-alt="Devcamp 2013">
                 <span data-src="assets/images/10-small"></span>
                 <span data-src="assets/images/10-medium" data-media="(min-width: 700px)"></span>
                 <span data-src="assets/images/10-large" data-media="(min-width: 1200px)"></span>
@@ -104,6 +104,16 @@
         <script src="/bower_components/jquery/jquery.min.js"></script>
         <script src="/bower_components/modernizr/modernizr.js"></script>
         <script src="/bower_components/picturefill/picturefill.js"></script>
+        <script>
+            $( document ).ready(function() {
+                $( window ).scroll(function () {
+                    $('.image').waypoint(function() {
+                        $(this).attr('data-picture',''); 
+                        picturefill();
+                    }, { offset: '50%' });
+                });
+            });
+        </script>
         <script src="http://localhost:35729/livereload.js"></script>
     </body>
 </html>
