--- a/app/index.html
+++ b/app/index.html
@@ -7,94 +7,94 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link href="stylesheets/screen.css" rel="stylesheet" type="text/css" />
+        <script src="http://localhost:35729/livereload.js"></script>
     </head>
 
     <body>
         <div class="page">
             <h1>Tłokinia</h1>
-            <img src="assets/images/7-large.jpg" alt="">
             <nav>
                 Nav
             </nav>
 
             <p>Test</p>
 
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/1-small"></span>
-                <span data-src="assets/images/1-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/1-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/1-small.jpg"></span>
+                <span data-src="assets/images/1-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/1-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/1-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/2-small"></span>
-                <span data-src="assets/images/2-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/2-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/2-small.jpg"></span>
+                <span data-src="assets/images/2-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/2-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/2-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/3-small"></span>
-                <span data-src="assets/images/3-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/3-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/3-small.jpg"></span>
+                <span data-src="assets/images/3-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/3-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/3-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/4-small"></span>
-                <span data-src="assets/images/4-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/4-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/4-small.jpg"></span>
+                <span data-src="assets/images/4-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/4-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/4-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/5-small"></span>
-                <span data-src="assets/images/5-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/5-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/5-small.jpg"></span>
+                <span data-src="assets/images/5-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/5-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/5-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/6-small"></span>
-                <span data-src="assets/images/6-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/6-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/6-small.jpg"></span>
+                <span data-src="assets/images/6-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/6-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/6-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/7-small"></span>
-                <span data-src="assets/images/7-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/7-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/7-small.jpg"></span>
+                <span data-src="assets/images/7-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/7-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/7-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/8-small"></span>
-                <span data-src="assets/images/8-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/8-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/8-small.jpg"></span>
+                <span data-src="assets/images/8-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/8-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/8-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/9-small"></span>
-                <span data-src="assets/images/9-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/9-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/9-small.jpg"></span>
+                <span data-src="assets/images/9-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/9-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/9-small.jpg" alt="Devcamp 2013">
                 </noscript>
             </span>
-            <span itemprop="image" class="image" data-alt="Devcamp 2013">
-                <span data-src="assets/images/10-small"></span>
-                <span data-src="assets/images/10-medium" data-media="(min-width: 700px)"></span>
-                <span data-src="assets/images/10-large" data-media="(min-width: 1200px)"></span>
+            <span class="image" itemprop="image" data-alt="Devcamp 2013">
+                <span data-src="assets/images/10-small.jpg"></span>
+                <span data-src="assets/images/10-medium.jpg" data-media="(min-width: 700px)"></span>
+                <span data-src="assets/images/10-large.jpg" data-media="(min-width: 1200px)"></span>
                 <noscript>
                     <img src="assets/images/10-small.jpg" alt="Devcamp 2013">
                 </noscript>
@@ -103,16 +103,29 @@
         <script src="/bower_components/jquery/jquery.min.js"></script>
         <script src="/bower_components/modernizr/modernizr.js"></script>
         <script src="/bower_components/picturefill/picturefill.js"></script>
-        <script>
-            $( document ).ready(function() {
-                $( window ).scroll(function () {
-                    $('.image').waypoint(function() {
-                        $(this).attr('data-picture',''); 
-                        picturefill();
-                    }, { offset: '50%' });
-                });
-            });
-        </script>
+        <script src="/bower_components/jquery-waypoints/waypoints.js"></script>
         <script src="http://localhost:35729/livereload.js"></script>
+        <script>
+            function bindPictureFill(el) {
+                el.attr('data-picture', '');
+                picturefill();
+
+
+                el.find('img').load(function () {
+                    var next = el.next('.image');
+                    console.log('image-loaded', el)
+                    el.waypoint(function () {
+                        console.log('waypoint fired')
+                        bindPictureFill(next)
+                    }, { offset: 0 })
+                });
+
+
+                
+            }
+
+            bindPictureFill($('.image').first());
+            
+        </script>
     </body>
 </html>
