lekkie ostylowanie layoutu

--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,12 @@
 
     <body>
         <div class="page">
-            <h1>Tłokinia</h1>
+            <h1>DevCamp - Tłokinia Kościelna 2013</h1>
             <nav>
-                Nav
+                <ul>
+                    <li><a href="https://www.facebook.com/devmeetingspl">devmeetings</a></li>
+                    <li><a href="https://www.facebook.com/photo.php?fbid=655482661139095&set=a.183531988334167.38074.151035771583789&type=1&theater">devcamp</a></li>
+                </ul>
             </nav>
 
             <p>Test</p>
