css regions content fix

--- a/regions/app/index.html
+++ b/regions/app/index.html
@@ -113,7 +113,7 @@
             <figure>
                 <img src="images/adam.jpg" width="400" alt="Adam Zamożewicz">
             </figure>
-            <h1>Adam Zamożewicz</h1>
+            <h1>Adam Zamożniewicz</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
